# supercode

./: README.md  package-lock.json
backend/: pom.xml
backend-axum/: Cargo.toml
backend-axum/src/: main.rs
backend-axum/src/api/: mod.rs
backend-axum/src/api/accounts/: mod.rs
backend-rs/: Cargo.toml  README.md
backend-rs/src/: main.rs
backend-rs/src/api/: mod.rs
backend-rs/src/api/accounts/: mod.rs
backend-rs/src/api/worker/: mod.rs  service.rs
backend-rs/src/worker/: mod.rs
backend/src/main/java/com/supercode/supercode/: SupercodeApplication.java
backend/src/main/resources/: application.properties
backend/src/test/java/com/supercode/supercode/: SupercodeApplicationTests.java
frontend/: components.d.ts  package-lock.json  package.json  vite.config.ts
frontend-astro/: package-lock.json  package.json
frontend-astro/src/: middleware.ts
frontend-astro/src/pages/: login.astro  register.astro
frontend-kmp/: settings.gradle.kts
frontend-kmp/.fleet/: receipt.json
frontend-kmp/composeApp/: build.gradle.kts
frontend-kmp/composeApp/src/androidMain/kotlin/org/supercode/: MainActivity.kt  Platform.android.kt
frontend-kmp/composeApp/src/androidMain/res/values/: strings.xml
frontend-kmp/composeApp/src/wasmJsMain/resources/: index.html
frontend/src/: App.vue  main.ts
frontend/src/api/: user.ts
frontend/src/components/: AdminHeader.vue  UserHeader.vue
frontend/src/route/: index.ts
frontend/src/views/admin/: AdminDashboard.vue
frontend/src/views/app/: UserApp.vue
frontend/src/views/user/: UserLogin.vue  UserRegister.vue
(+37 files in other folders)
