[package]
name = "backend-axum"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
axum-extra = { version = "0.10.0", features = ["cookie"] }
bcrypt = "0.17.0"
chrono = "0.4.40"
jsonwebtoken = "9.3.1"
mysql = "26.0.0"
serde = "1.0.219"
tokio = { version = "1.44.1", features = ["full"] }
toml = "0.8.20"
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
